        eg: script.php --globalOption action1 --host ab action2 --host cd
        eg: script.php doThis -p 123 doThat now
        - Existing configurations will be used as is as global whitelist or 
          needs to be extended to new action groups.
        - Return values will return like befor when not using the addition.
    - Improves phpdoc/ code
    - Updates Tests

2016-05-15
    Mumsys_Logger_*
    - adds method to replace loglevel during runtime
    - Updates tests to be 100% of code coverage
    
2016-03-01
    Mumsys_I18n (init from svn to git)
    - Init Mumsys_I18n_Abstract
    - Init Mumsys_I18n_Default
    - Updates Mumsys_I18n_Interface
    - Updates Mumsys_I18n_*Tests


2016-02-19
    Mumsys_Logger
    - Init Mumsys_Logger_Writer_Interface
    - Init Mumsys_Logger_Abstract
    - Init Mumsys_Logger_Default
    - Init Mumsys_Logger_File
    - Mark "Mumsys_Logger" to be deprecated


2016-01-31
    Mumsys_Registry
    - Init class and tests for LGPL
    - Improves tests
    - codecoverage 100%


2016-01-30
    Mumsys_Session
    - Add session handling
    - Adds tests
    - codecoverage 100%
    Mumsys_Timer
    - Updates tests
    - extending by Mumsys_Abstract
    - codecoverage 100%
    Mumsys_Logger
    - Improves logger tests
    - codecoverage 100%
    - Adds todo: change visibility of class properties
    Mumsys_Lock
    - Init class and tests for LGPL
    - Improves tests
    - codecoverage 100%
    Mumsys_Counter
    - Init class and tests for LGPL
    - Improves tests
    - codecoverage 100%
    Mumsys_Cache
    - Init class and tests for LGPL
    - Improves tests
    - codecoverage 100%


2016-01-22
    Mumsys_Parser 
    - version 1.1.1
    - Init class for LGPL
    - Init tests
    - Fixes some bugs
    - codecoveage 100%


2015-10-25
    Mumsys_Multirename
    - Adds --exclude option, Updates tests
    - version 1.3.1
    Mumsys_GetOpts
    - Improves getHelp() output, updates test


2015-09-14
    Mumsys_SVDRP