@@ -1,6 +1,5 @@
 <?php
 
-
 /* {{{ */
 /**
  * Mumsys_Request_Default
@@ -32,7 +31,19 @@ class Mumsys_Request_Default
     /**
      * Version ID information
      */
-    const VERSION = '1.0.0';
+    const VERSION = '1.1.0';
+
+    /**
+     * Incomming get parameters
+     * @var array
+     */
+    protected $_inputGet = array();
+
+    /**
+     * Incomming post parameters
+     * @var array
+     */
+    protected $_inputPost = array();
 
 
     /**
@@ -45,28 +56,62 @@ class Mumsys_Request_Default
      */
     public function __construct( array $options = array() )
     {
-        if (isset($options['programKey'])) {
-            $this->setProgramKey($options['programKey']);
-        }
-
-        if (isset($options['controllerKey'])) {
-            $this->setControllerKey($options['controllerKey']);
-        }
-
-        if (isset($options['actionKey'])) {
-            $this->setActionKey($options['actionKey']);
-        }
+        parent::__construct($options);
 
         if (isset($_GET) && is_array($_GET)) {
             $this->_input += $_GET;
-
+            $this->_inputGet = $_GET;
         }
 
         if (isset($_POST) && is_array($_POST)) {
             $this->_input += $_POST;
+            $this->_inputPost = $_POST;
         }
 
         $_GET = $_POST = array();
+    }
+
+
+    /**
+     * Returns a post parameter by requested key.
+     * If $key is empty it will return all incoming posts parameters
+     *
+     * @param string $key Key to get
+     * @param mixed $default Value to return if key not exists
+     * @return mixed
+     */
+    public function getInputPost( $key = null, $default = null )
+    {
+        if (empty($key)) {
+            return $this->_inputPost;
+        }
+
+        if (isset($this->_inputPost[$key])) {
+            return $this->_inputPost[$key];
+        } else {
+            return $default;
+        }
+    }
+
+
+    /**
+     * Returns a get parameter by requested key.
+     * If $key is empty it will return all incomming get parameters
+     *
+     * @param string $key Array key to get
+     * @param mixed $default Value to return if key not exists
+     * @return mixed
+     */
+    public function getInputGet( $key = null, $default = null )
+    {
+        if (empty($key)) {
+            return $this->_inputGet;
+        }
+        if (isset($this->_inputGet[$key])) {
+            return $this->_inputGet[$key];
+        } else {
+            return $default;
+        }
     }
 
 }
