@@ -12,6 +12,12 @@ Still in todo: 2016-XX-XX
     - Updates Tests
 
 2016-05-15
+    Mumsys_Request_*
+    - Improves input handling, extend interface, updates classes to fit the 
+      interface
+    - Improves coding style
+    - updates tests: code coverage 100%
+
     Mumsys_Logger_*
     - adds method to replace loglevel during runtime
     - Updates tests to be 100% of code coverage
